# seaBattle

./: CMakeLists.txt  Щербак_Максим_3344_лаб4.docx
Ability/: Abilities.cpp  Abilities.h  AbilityManager.cpp  AbilityManager.h  AbilityResponce.cpp  AbilityResponce.h  Iability.h
Players/: Player.cpp  Player.h
exceptions/: exceptions.h
factory/: IFactory.h  factories.cpp  factories.h
gamelogic/: Command.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Game.cpp  Game.h  GameController.h  GameDisplay.h  GameState.cpp  GameState.h  Serializable.cpp  Serializable.h  TerminalHandler.cpp  TerminalHandler.h  commands.json  main.cpp
holders/: InputHandler.cpp  holder.cpp  holders.h  inputHandler.h
shipsAndMap/: Cell.cpp  Cell.h  map.cpp  map.h  ship.cpp  ship.h  shipmanager.cpp  shipmanager.h
